# SSAFY_brbrbr

./: .gitignore  LICENSE  README.md  docker-compose.yml  init-letsencrypt.sh  readme.md
back-end/: .gitignore  Dockerfile.prod  README.md  package.json  publisher.ts  receiver.ts  server.ts  socketMain.ts  start.sh  tsconfig.json
back-end/flask/: app.py
back-end/flask/controller/: apis.py
back-end/flask/module/database/: config.py
back-end/flask_bak/controller/: apis.py
back-end/flask_bak/module/database/: config.py  database.py
back-end/local-receiver/: receiver.py
back-end/middlewares/: validateCode.ts
back-end/models/: log.ts
back-end/old/: .gitignore  requirements.txt
back-end/old/flask/: app.py  config.py
back-end/old/flask/model/: USER.py
back-end/old/flask_bak/: app.py
back-end/prisma/: schema.prisma
back-end/prisma/migrations/20200531160749-init/: README.md  schema.prisma  steps.json
back-end/prisma/migrations/20200531171451-init/: README.md  schema.prisma  steps.json
back-end/prisma/migrations/20200531200413-add-place-to-event/: schema.prisma  steps.json
back-end/prisma/migrations/20200601113540-add-robot/: README.md  schema.prisma  steps.json
back-end/prisma/migrations/20200601162454-add-robot-name/: README.md  schema.prisma  steps.json
back-end/prisma/migrations/20200605131355-add-thumnail/: README.md  schema.prisma  steps.json
back-end/redis/: client.ts  robot.ts
back-end/robot/: mock.ts  order.ts
back-end/routes/: event.ts  helpers.ts  place.ts  robot.ts  search.ts
back-end/server/: package.json  server.ts
back-end/server/prisma/: schema.prisma
back-end/utils/: getRandomCode.ts
bixby/: README.md
bixby/brrrbrrr.broombroom/: capsule.bxb  legal.bxb
bixby/brrrbrrr.broombroom/code/: CreateOrder.js  EndOrder.js  GetAuthenticationState.js  GetPlaceAndEvent.js  IsPressedArrivalButton.js  SelectDestination.js  SelectGuideType.js  UpdateOrder.js
bixby/playground.broombroom/: README.md  capsule.bxb
bixby/playground.broombroom/code/: CommitOrder.js  CreateOrder.js  EndOrder.js  GetAuthenticationState.js  IsPressedArrivalButton.js  SearchPlaceAndEvent.js  SelectDestination.js  SelectEvent.js  SelectGuideType.js  SelectPlace.js  SelectPlaceOrEvent.js  SetInitialState.js  UpdateOrder.js  checkAuthenticationCode.js
docs/: Project.md  자율주행 서비스.md
docs/API 명세서/: README.md
docs/DB 스키마 정리/: README.md
docs/Git Conventions/: Git Conventions.md
docs/ROS/: ROS.md
docs/ayl/: 200511_로봇 하드웨어 자료조사.md  200512_로봇 하드웨어 부품검색.md  200518_ARM의 Cortex M4 STM32F407VET6.md  200520_Jetson Nano Wifi 설정하기.md  200521_Jetson Nano PyTorch 설치.md  200522_Jetson Nano Object Detection.md  200527_Jetson Nano Object Detection.md  200603_Eternal Pain.md  ROS.md  test.html
docs/jetsonNano/: 200514_로봇 서비스 관련.md  200519_Windows에 ROS2 설치 도전과 포기.md  200521_Jetson Nano PyTorch 설치.md  200525_Jetson Nano Thumbs Project.md  200604_Eternal Pain.md  200605_ubuntu 부팅 시 셋팅.md  README_AI.md  teachable_test.html  tts_test.py
docs/jetsonNano/my_model/: metadata.json
docs/presentation/중간발표/: 부릉부릉 사용자 시나리오.md  아이콘들ver2.pptx  중간발표 시나리오.md
docs/자율주행 서비스/: 자율주행 서비스.md
front-end/: .gitignore  Dockerfile  Dockerfile.prod  Dockerfile.test.proxy  Dockerfile.test.react  README.md  package.json  tsconfig.json
front-end/nginx/: nginx.conf  nginx.test.conf
front-end/public/: index.html
front-end/src/: App.tsx  index.css  index.tsx  index_lan.css
front-end/src/api/: client.ts  event.ts  place.ts  robot.ts
front-end/src/components/: ManageEvents.tsx  ManagePlaces.tsx  ManageRobots.tsx
front-end/src/pages/: AdminPage.tsx  AuthCodePage.tsx  DestinationPage.tsx  GuidePage.tsx  HomePage.tsx  LandingPage.js  LandingPage.jsx  LandingPage.tsx  ListOnFloorPage.tsx  RobotPage.tsx  ServicePage.tsx  Tutorial.tsx  WelcomePage-motion.tsx  WelcomePage.tsx  WelcomePage_hand.jsx  index.html
front-end/src/utils/: manifest.json  socketConn.ts
robot/MPU6050TEST/: .cproject  .project
robot/MPU6050TEST/Debug/: MPU6050TEST.map  makefile  objects.list
robot/MPU6050TESTMadgwick/: .cproject  .project  MPU6050TESTMadgwick.ioc
robot/MPU6050TESTMadgwick/Debug/: MPU6050TESTMadgwick.list  makefile  objects.list
robot/romi_package/br_comm/: CMakeLists.txt  package.xml
robot/romi_package/br_comm/scripts/: mqtt_test.py
robot/romi_package/br_navigation/: CMakeLists.txt  package.xml
robot/romi_package/br_navigation/launch/: amcl.launch.xml  br_navigation.launch
robot/romi_package/br_navigation/maps/: map3.pgm  map3.yaml
robot/romi_package/br_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
robot/romi_package/br_navigation/rviz/: nav.rviz
robot/romi_package/brbr_bringup/: CMakeLists.txt  package.xml
robot/romi_package/brbr_bringup/launch/: br_remote.launch
robot/romi_package/brbr_bringup/launch/includes/: brbr.urdf.xacro  brbr.urdf.xml
robot/romi_package/brbr_bringup/src/: twist_to_motors.cpp
robot/romi_package/brbr_description/: CMakeLists.txt  package.xml
robot/romi_package/brbr_description/launch/: view_demo.launch
robot/romi_package/brbr_description/meshes/bases/: ball_caster.stl  brbr_base.stl
robot/romi_package/brbr_description/rviz/: robot_model.rviz
robot/romi_package/brbr_description/urdf/: brbr.urdf  common_properties.xacro
robot/romi_package/brbr_slam/: CMakeLists.txt  package.xml
robot/romi_package/brbr_slam/launch/: br_slam.launch
robot/romi_package/brbr_teleop/: CMakeLists.txt  package.xml
robot/romi_package/brbr_teleop/laucnh/: ar_teleop_key.launch
robot/romi_package/brbr_teleop/src/: br_teleop_key.cpp
robot/stm32f407ve/: tmp.txt
robot/stm32f407ve/MPU6050TEST/: .mxproject  MPU6050TEST Debug.launch  MPU6050TEST.ioc
robot/stm32f407ve/MPU6050TESTMadgwick/: .mxproject  MPU6050TESTMadgwick Debug.launch
robot/stm32f407ve/brbr_core/: .cproject  .mxproject  .project  brbr_core Debug.launch  brbr_core.ioc
robot/stm32f407ve/rosserial/: .cproject  .mxproject  .project  rosserial_test2 Debug.launch  rosserial_test2.ioc
(+328 files in other folders)
