<?xml version="1.0"?>
<package format="2">
  <name>br_navigation</name>
  <version>0.0.0</version>
  <description>The br_Navigation provides roslaunch scripts for starting the navigation</description>
  <maintainer email="swimming_7291@daum.net">lsy</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>br_bringup</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>


