<?xml version="1.0" ?>
<package>
  <name>br_bringup</name>
  <version>0.0.1</version>
  <description>
    roslaunch scripts for starting the AR
  </description>
  <license>none</license>
  <author email="swimming_7291@daum.net">lsy</author>
  <maintainer email="swimming_7291@daum.net">lsy</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>robot_pose_ekf</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>br_teleop</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>tf</run_depend>
  <export></export>
</package>
