<?xml version="1.0"?>
<package format="2">
  <name>brbr_description</name>
  <version>0.0.0</version>
  <description>The brbr_description package</description>
  <maintainer email="swimming_7291@daum.net">LeeSooYoung</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>


  <export>

  </export>
</package>
