<?xml version="1.0"?>
<package>
  <name>br_slam</name>
  <version>0.1.6</version>
  <description>
    The brbr_slam package provides roslaunch scripts for starting the SLAM
  </description>
  <license>none</license>
  <author email="swimming_7291@daum.net">lsy</author>
  <maintainer email="swimming_7291@daum.net">lsy</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>br_bringup</run_depend>
  <run_depend>gmapping</run_depend>
</package>
