<?xml version="1.0"?>
<package>
  <name>br_teleop</name>
  <version>0.0.0</version>
  <description>The br_teleop package</description>
  <maintainer email="swimming_7291@daum.net">lsy</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
